# wiki-fil-cel-scraper

./: README.md  links.csv  pyproject.toml
output/: actors.csv  actors_cleaned.csv  actors_engineered.csv  actors_image_url.csv  actors_really_cleaned.csv  actors_with_timestamp_birthdate.csv  filipino_actors_actresses.csv
src/: config.py  main.py  scrape.py  scraper.py
src/eda/: engineered.ipynb  notebook.ipynb
src/etl/: transformer.py
