[project]
name = "wiki-fil-cel-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "coloredlogs>=15.0.1",
    "pandas>=3.0.0",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "types-beautifulsoup4>=4.12.0.20250516",
    "wikipedia-api>=0.9.0",
]
